PROJECT(gomory)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
include(ExternalProject)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

FIND_PACKAGE(GUROBI)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)

FOREACH(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
	STRING(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/output)
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/output)
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/output)
ENDFOREACH(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)

set(QSOPT_EX_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libraries/qsopt-ex")

if(QSOPT_EX_DIR)
	set(QSOPT_EX_FOUND TRUE)
	ExternalProject_Add(
		qsopt-ex
		SOURCE_DIR "${QSOPT_EX_DIR}"
		CONFIGURE_COMMAND ""
		INSTALL_COMMAND ""
		BUILD_IN_SOURCE 1
		BUILD_COMMAND "make")
	INCLUDE_DIRECTORIES("${QSOPT_EX_DIR}/src")
else()
	set(QSOPT_EX_FOUND FALSE)
endif()

INCLUDE_DIRECTORIES("libraries/rapidjson/include")
INCLUDE_DIRECTORIES("libraries/eigen/")
INCLUDE_DIRECTORIES("${GUROBI_INCLUDE_DIR}")

ADD_SUBDIRECTORY(source)
