SET(SOURCE_FILES gomory.cpp)
SET(HEADER_FILES gomory.h)

SET(NAME "gomory")
SET(EXECUTABLE "${NAME}")

IF(WIN32)
	ADD_EXECUTABLE(${EXECUTABLE} WIN32 ${SOURCE_FILES})
ELSEIF(APPLE)
	ADD_EXECUTABLE(${EXECUTABLE} MACOSX_BUNDLE ${SOURCE_FILES})
ELSE()
	ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE_FILES})
ENDIF()

TARGET_LINK_LIBRARIES(${EXECUTABLE} Common)
